styling.css
body {
  font-family: "Roboto", sans-serif;
  font-weight: light;
  box-sizing: border-box;
}

.top-info {
  display: flex;
  flex-direction: column;
  max-width: 100%;
  justify-content: space-between;
  flex-wrap: wrap;
  margin-bottom: 0%;
}

.img {
  background-color: #b4ceb3;
  background-image: url(./Designs/Design-1/assets/turning-torso.jpg);
  background-size: 100% 100%;
  height: 500px;
}

h1 {
  color: #b0c4de;
  font-size: 35px;
  font-weight: lighter;
  line-height: 30px;
  text-align: center;
}

h2 {
  color: #b0c4de;
  font-size: 25px;
  font-weight: lighter;
  line-height: 25px;
  text-align: center;
  margin: 15px 20px;
  text-transform: capitalize;
}

.tempToday {
  font-size: 50px;
  margin-top: 15px;
  margin-bottom: 5px;
}

h3 {
  margin-top: 5px;
  text-align: left;
  font-weight: lighter;
  margin-left: 15px;
  color: #E7CFBC;
}

h4 {
  text-align: right;
  font-size: 18px;
  font-weight: lighter;
  margin-right: 15px;
  color: #E7CFBC;
}

h5 {
  text-align: center;
  align-items: flex-end;
  font-size: 20px;
  color: #E7CFBC;
  font-weight: lighter;
}

.weather-five-days {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  background: #b0c4de;
  text-align: center;
  margin: inherit;
  border-bottom: 2px darkcyan solid;
}

.weekday-name {
  font-size: 20px;
  font-weight: lighter;
  padding: 10px;
  text-transform: capitalize;
}

.day-temp {
  font-size: 20px;
  font-weight: lighter;
}

.descriptionToday img {
  width: 50px;
}

.descriptionToday {
  display: flex;
  justify-content: center;
}

